tests/cases/error/error_recursive_include.out
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rapt:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Script Error
 --> tests/cases/error/error_recursive_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Script error: Too many nested includes
3 | # line 3
4 |
  |
